--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"
         ></script>
+        <script src="pipe.js"></script>
         <script src="bird.js"></script>
         <script type="text/javascript" src="sketch.js"></script>
     </head>
